# shorts_pipeline_project

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: __init__.py  main.py
app/api/routes/: health.py  jobs.py
app/core/: config.py  logging.py  sentry.py
app/db/: models.py  session.py
app/monitoring/: metrics.py  step_tracker.py
app/pipeline/: orchestrator.py
app/pipeline/steps/: analyze_plot.py  extract_subtitles.py  ffmpeg_utils.py  generate_timecodes.py  srt_utils.py  write_script.py
app/schemas/: job.py
app/services/llm/: anthropic_provider.py  base.py  factory.py  fake_provider.py  openai_provider.py
app/services/storage/: base.py  factory.py  local_backend.py
app/services/tts/: base.py  edge_provider.py  factory.py  fake_provider.py
app/workers/: celery_app.py  tasks.py
docker/: Dockerfile  docker-compose.yml
grafana/dashboards/: shorts_pipeline_overview.json
grafana/provisioning/dashboards/: dashboards.yml
prometheus/: prometheus.yml
tests/: conftest.py
tests/integration/: test_celery_task.py  test_health.py  test_jobs_api.py  test_orchestrator.py
tests/unit/: test_ffmpeg_utils.py  test_llm_factory.py  test_llm_fake_provider.py  test_pipeline_steps.py  test_srt_utils.py  test_tts_and_storage.py
