[project]
name = "shorts-pipeline"
version = "0.1.0"
description = "AI-пайплайн нарезки длинных видео в YouTube Shorts с LLM-сценарием, TTS-озвучкой и мониторингом"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "flower>=2.0.1",
    "openai>=1.54.0",
    "anthropic>=0.39.0",
    "edge-tts>=6.1.19",
    "faster-whisper>=1.1.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "sentry-sdk[fastapi,celery]>=2.17.0",
    "prometheus-client>=0.21.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "pytest-celery>=1.1.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "factory-boy>=3.3.1",
    "aiosqlite>=0.20.0",
    "pytest-env>=1.1.5",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
env = [
    "ENVIRONMENT=ci",
    "LLM_PROVIDER=fake",
    "TTS_PROVIDER=fake",
    "STORAGE_BACKEND=local",
    "LOG_JSON=false",
]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
